clusters/kube.sphygmo.io/example/web-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-svc
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
