clusters/kube.sphygmo.io/example/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: web.kube.sphygmo.io
    http:
      paths:
      - backend:
          serviceName: web-svc
          servicePort: 8080
